--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,10 @@
     "minimum-stability": "stable",
     "require": {
         "php": ">=5.4.0",
-        "laravel/framework": "5.*"
+        "orchestra/testbench": "^3.0"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^5.6"
     },
     "autoload": {
         "psr-4": {
