Fixes dev autoload

--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,8 @@
         }
     },
     "autoload-dev": {
-        "Nlocascio\\Mindbody\\Tests\\": "tests"
+        "psr-4": {
+            "Nlocascio\\Mindbody\\Tests\\": "tests"
+        }
     }
 }
