Added php soap options, removed unused options

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,8 @@ php:
   - '7.0'
   - '7.1'
 before_install:
-  - if [[ $TRAVIS_PHP_VERSION != 7.1 ]] ; then phpenv config-rm xdebug.ini; fi
-  - echo "extension = memcached.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
+  - echo "soap.wsdl_cache_enabled=1" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
+  - echo "soap.wsdl_cache_limit = 10" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
   - travis_retry composer self-update
 install: travis_retry composer install --no-interaction --prefer-dist --no-suggest
 script: vendor/bin/phpunit
