Makes compatible with Laravel >=5.1

--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     ],
     "require": {
         "php": "^7.0",
-        "illuminate/support": "5.1.* || 5.2.* || 5.3.* || 5.4.*"
+        "illuminate/support": ">=5.1"
     },
     "require-dev": {
         "vlucas/phpdotenv": "^2.4",
